--- a/css/index.css
+++ b/css/index.css
@@ -46,8 +46,8 @@ nav {
   padding: 0.5rem 1rem;
   transition: all 0.2s ease-in-out;
 }
-.top-10 {
-  margin-top: 10%;
+.top-5 {
+  margin-top: 5%;
 }
 
 .btn-theme {
